<resources>
    <string name="app_name">嗨报</string>
    <string name="log_name">MvpFrame</string>

    <string name="login_name_hint">请输入用户名/手机号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_btn_txt">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_out_btn_txt">退出登录</string>
    <string name="login_other_txt">其他方式登录</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_code_hint">请输入验证码</string>
    <string name="login_code_get">获取验证码</string>

    <string name="register_btn_txt">注册</string>

    <string name="fg_pw_txt">忘记密码</string>

    <string name="app_download">下载</string>
    <string name="app_loading">加载中...</string>
    <string name="app_success">请求成功</string>
    <string name="app_error">请求错误</string>
    <string name="app_ok">确认</string>
    <string name="app_cancel">取消</string>

    <string name="app_tab_home">主页</string>
    <string name="app_tab_eat">吃喝</string>
    <string name="app_tab_play">玩乐</string>
    <string name="app_tab_mine">我的</string>

    <string name="login_name_or_pw_input">请输入用户名和密码</string>

    <string name="app_mine_login_click">点击登录</string>
    <string name="app_mine_login_des">登录更精彩</string>
    <string name="user_sign_in">用户签到</string>

    <string name="app_mine_message">我的消息</string>
    <string name="app_mine_group">拔草历程</string>
    <string name="app_mine_collection">我的收藏</string>
    <string name="app_mine_trip">行程计划</string>
    <string name="app_mine_setting">系统设置</string>
    <string name="app_mine_opinion">帮助与反馈</string>
    <string name="app_mine_about">关于我们</string>

    <string name="app_mine_user_level">用户功勋</string>
    <string name="app_mine_user_vip">会员活动</string>
    <string name="app_mine_alert_msg">新活动筹备中，敬请期待吧。</string>

    <string name="system_setting_update">版本更新</string>
    <string name="system_setting_clear">垃圾清理</string>
    <string name="system_setting_night">夜间模式</string>
    <string name="system_setting_out_login">退出</string>
    <string name="system_setting_out_login_msg">您确定退出当前登录账号吗？</string>

    <string name="about_our_function">功能介绍</string>
    <string name="about_our_contact">联系我们</string>
    <string name="about_our_rights_en">All rights reserved</string>
    <string name="about_our_rights_cn">个人版权所有 2019-2025</string>

    <!--权限对应字符串 start-->
    <string name="android_permission_READ_CALENDAR">日历</string>
    <string name="android_permission_WRITE_CALENDAR">日历</string>

    <string name="android_permission_CAMERA">相机</string>

    <string name="android_permission_READ_CONTACTS">联系人</string>
    <string name="android_permission_WRITE_CONTACTS">联系人	</string>
    <string name="android_permission_GET_CONTACTS">联系人</string>

    <string name="android_permission_ACCESS_FINE_LOCATION">位置信息</string>
    <string name="android_permission_ACCESS_COARSE_LOCATION">位置信息 </string>

    <string name="android_permission_RECORD_AUDIO">麦克风</string>

    <string name="android_permission_READ_PHONE_STATE">电话</string>
    <string name="android_permission_CALL_PHONE">电话</string>
    <string name="android_permission_READ_CALL_LOG">电话</string>
    <string name="android_permission_WRITE_PHONE_STATE">电话</string>
    <string name="android_permission_USE_SIP">电话</string>
    <string name="android_permission_PROCESS_OUTGOING_CALLS">电话</string>
    <string name="com_android_voicemail_permission_ADD_VOICEMAIL">电话</string>

    <string name="android_permission_BODY_SENSORS">传感器</string>

    <string name="android_permission_SEND_SMS">短信</string>
    <string name="android_permission_RECEIVE_SMS">短信</string>
    <string name="android_permission_READ_SMS">短信</string>
    <string name="android_permission_RECEIVE_WAP_PUSH">短信</string>
    <string name="android_permission_RECEIVE_MMS">短信</string>
    <string name="android_permission_READ_CELL_BROADCASTS">短信</string>

    <string name="android_permission_READ_EXTERNAL_STORAGE">存储空间</string>
    <string name="android_permission_WRITE_EXTERNAL_STORAGE">存储空间</string>
    <!--权限对应字符串 end-->
</resources>
