<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        >

        <com.yk.mvpframe.widget.SuperEditText
            android:id="@+id/login_name_set"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:input_max_length="20"
            app:title_name="账号"
            app:hint_txt="@string/login_name_hint"
            app:title_img="@mipmap/frame_account"
            />

        <com.yk.mvpframe.widget.SuperEditText
            android:id="@+id/login_pw_set"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/login_name_set"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:input_max_length="20"
            app:is_pw_input="true"
            app:title_name="密码"
            app:hint_txt="@string/login_pwd_hint"
            app:title_img="@mipmap/frame_pw"
            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/login_pw_set"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login_btn_txt"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_common_selector"
            />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
