<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/app_logo_rimg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:riv_border_color="@color/colorPrimary"
        app:riv_border_width="1dp"
        app:riv_corner_radius="10dp"
        android:layout_marginTop="38dp"
        android:src="@mipmap/app_logo"
        />

    <TextView
        android:id="@+id/app_version_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo_rimg"
        android:layout_marginTop="20dp"
        android:textColor="@color/tab_normal_grey"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/app_version_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_version_name_tv"
        android:layout_marginTop="0dp"
        android:text="Version1.0.0"
        android:textSize="16sp"
        />

    <View
        android:id="@+id/divider1"
        style="@style/system_setting_divider"
        android:layout_marginTop="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_version_code_tv"
        />

    <TextView
        android:id="@+id/app_function_tv"
        style="@style/system_setting_tv"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/about_our_function"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        />

    <View
        android:id="@+id/divider2"
        style="@style/system_setting_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_function_tv" />

    <TextView
        android:id="@+id/our_contact_tv"
        style="@style/system_setting_tv"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/about_our_contact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <View
        android:id="@+id/divider3"
        style="@style/system_setting_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/our_contact_tv" />

    <TextView
        android:id="@+id/rights_reserved_cn_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/about_our_rights_cn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/rights_reserved_en_tv"
        />

    <TextView
        android:id="@+id/rights_reserved_en_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/about_our_rights_en"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>
