<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/user_logo_cv"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            card_view:cardCornerRadius="40dp"
            app:cardElevation="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/default_head"
                />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/user_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="点击登录"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/user_logo_cv"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            />

        <TextView
            android:id="@+id/user_title_des_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录更精彩"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/user_title_tv"
            app:layout_constraintLeft_toRightOf="@+id/user_logo_cv"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            />

        <ImageView
            android:id="@+id/user_edit_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/app_edit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/user_title_tv"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            />


    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/user_message_tv"
                style="@style/mine_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/app_mine_message"
                android:drawableLeft="@mipmap/app_message"
                />

            <View
                android:id="@+id/user_message_divider_v"
                style="@style/mine_divider"
                app:layout_constraintTop_toBottomOf="@+id/user_message_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/user_collection_tv"
                style="@style/mine_text"
                app:layout_constraintTop_toBottomOf="@+id/user_message_divider_v"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/app_mine_collection"
                android:drawableLeft="@mipmap/app_collection"
                />

            <View
                android:id="@+id/user_collection_divider_v"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintTop_toBottomOf="@+id/user_collection_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorGreyE"
                />

            <TextView
                android:id="@+id/user_group_tv"
                style="@style/mine_text"
                app:layout_constraintTop_toBottomOf="@+id/user_collection_divider_v"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/app_mine_group"
                android:drawableLeft="@mipmap/app_foot"
                />

            <View
                android:id="@+id/user_group_divider_v"
                style="@style/mine_divider"
                app:layout_constraintTop_toBottomOf="@+id/user_group_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/user_trip_tv"
                style="@style/mine_text"
                app:layout_constraintTop_toBottomOf="@+id/user_group_divider_v"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/app_mine_trip"
                android:drawableLeft="@mipmap/app_trip"
                />

            <View
                android:id="@+id/user_trip_divider_v"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_constraintTop_toBottomOf="@+id/user_trip_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorGreyE"
                />

            <TextView
                android:id="@+id/user_setting_tv"
                style="@style/mine_text"
                app:layout_constraintTop_toBottomOf="@+id/user_trip_divider_v"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/app_mine_setting"
                android:drawableLeft="@mipmap/app_setting"
                />

            <View
                android:id="@+id/user_setting_divider_v"
                style="@style/mine_divider"
                app:layout_constraintTop_toBottomOf="@+id/user_setting_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/user_opinion_tv"
                style="@style/mine_text"
                app:layout_constraintTop_toBottomOf="@+id/user_setting_divider_v"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/app_mine_opinion"
                android:drawableLeft="@mipmap/app_opinion"
                />

            <View
                android:id="@+id/user_opinion_divider_v"
                style="@style/mine_divider"
                app:layout_constraintTop_toBottomOf="@+id/user_opinion_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <TextView
                android:id="@+id/user_about_tv"
                style="@style/mine_text"
                app:layout_constraintTop_toBottomOf="@+id/user_opinion_divider_v"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/app_mine_about"
                android:drawableLeft="@mipmap/app_about"
                />

            <View
                android:id="@+id/user_about_null_v"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@+id/user_about_tv"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>