<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/app_logo_rimg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:riv_border_color="@color/colorPrimary"
        app:riv_border_width="1dp"
        app:riv_corner_radius="10dp"
        android:layout_marginTop="38dp"
        android:src="@mipmap/app_logo"
        />

    <TextView
        android:id="@+id/app_version_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo_rimg"
        android:layout_marginTop="10dp"
        android:textColor="@color/tab_normal_grey"
        tools:text="V1.0.0"
        android:textSize="18sp"
        />

    <View
        android:id="@+id/divider1"
        style="@style/system_setting_divider"
        android:layout_marginTop="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_version_name_tv"
        />

    <TextView
        android:id="@+id/update_app_tv"
        style="@style/system_setting_tv"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/system_setting_update"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        />

    <TextView
        android:id="@+id/update_version_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/update_app_tv"
        app:layout_constraintBottom_toBottomOf="@+id/update_app_tv"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="45dp"
        android:text="V1.0.0"
        android:textSize="16sp"
        android:textColor="@color/edit_default_color"
        android:visibility="gone"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/user_habit_cv"
        android:layout_width="8dp"
        android:layout_height="8dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="@+id/update_version_tv"
        app:layout_constraintLeft_toRightOf="@+id/update_version_tv"
        android:visibility="gone"
        >

    </android.support.v7.widget.CardView>

    <View
        android:id="@+id/divider2"
        style="@style/system_setting_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_app_tv" />

    <TextView
        android:id="@+id/clear_app_tv"
        style="@style/system_setting_tv"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/system_setting_clear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <TextView
        android:id="@+id/clear_app_value_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/clear_app_tv"
        app:layout_constraintBottom_toBottomOf="@+id/clear_app_tv"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="45dp"
        android:text="3.2M"
        android:textSize="16sp"
        android:textColor="@color/edit_default_color"
        />

    <View
        android:id="@+id/divider3"
        style="@style/system_setting_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear_app_tv" />

    <TextView
        android:id="@+id/night_model_tv"
        style="@style/system_setting_tv"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/system_setting_night"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3"
        android:drawableRight="@null"
        />

    <Switch
        android:id="@+id/night_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/night_model_tv"
        app:layout_constraintBottom_toBottomOf="@+id/night_model_tv"
        android:layout_marginRight="22dp"
        android:thumb="@drawable/switch_night_thumb_selector"
        android:track="@drawable/switch_night_track_selector"
        />

    <View
        android:id="@+id/divider4"
        style="@style/system_setting_divider"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/night_model_tv"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_height="10dp"
        />

    <TextView
        android:id="@+id/tv_out_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/system_setting_out_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider4"
        android:textSize="17sp"
        android:gravity="center"
        />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_out_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorGreyEA"
        />

</android.support.constraint.ConstraintLayout>
